turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:11: error: ')' expected but ';' found.
    left(90;)
           ^Kerr36:11: error: illegal start of statement
    left(90;)
            ^